fix log windows too short when display is wide

--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -69,7 +69,7 @@
 
 @media(min-width: 768px) {
 
-    .logsTab {
+    .logsAll {
         height: 400px;
     }
 
